--- a/conversions/templates/conversions/edit_conversion.html
+++ b/conversions/templates/conversions/edit_conversion.html
@@ -13,10 +13,18 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
+        <div class="row">
+            <div class="col"> 
+                <h2 class="logo-font mt-5 mb-4 text-white">Edit Conversion</h2>
+                <hr>
+                <a class="text-white" href="{% url 'my_listings' %}">
+                    <span><i class="fas fa-chevron-left text-white"></i> BACK TO MY LISTINGS</span>
+                </a>
+            </div>
+        </div>
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10 col-xl-8 bg-white mt-4">
                 <hr>
-                <h2 class="logo-font mb-4">Edit Conversion</h2>
                 <h5>Basic Info</h5>
                 <hr>
             </div>
