--- a/templates/base.html
+++ b/templates/base.html
@@ -108,8 +108,8 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
-        <div id="delivery-banner" class="row text-center">
-            <div class="col bg-black text-white">
+        <div id="special-message-banner" class="row text-center">
+            <div class="col text-white">
                 <h4 class="logo-font my-1">NEW CONVERSIONS ADDED WEEKLY</h4>                
             </div>            
         </div>
