--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,6 +1,6 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
-        <li class="nav-item dropdown">
+        <li class="nav-item nav-link nav-link-fade-up dropdown">
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="view-conversions-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 BUY A CONVERSION
             </a>
@@ -11,8 +11,8 @@
             </div>
         </li>
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="sell-conversion-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li class="nav-item nav-link nav-link-fade-up dropdown">
+            <a class="logo-font font-weight-bold nav-link mr-5 text-white" href="#" id="sell-conversion-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 SELL A CONVERSION
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
@@ -21,7 +21,7 @@
             </div>
         </li>
 
-        <li class="nav-item dropdown">
+        <li class="nav-item nav-link nav-link-fade-up dropdown">
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="merchandise-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 MERCHANDISE
             </a>
@@ -33,14 +33,14 @@
             </div>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item nav-link nav-link-about nav-link-fade-up dropdown">
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="about-us-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 ABOUT US
             </a>
         </li>
 
-        <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-white" href="#" id="faq-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li class="nav-item nav-link nav-link-faq nav-link-fade-up dropdown">
+            <a class="logo-font font-weight-bold nav-link text-white" href="#" id="faq-link" aria-haspopup="true" aria-expanded="false">
                 FAQ
             </a>
         </li>
