Update nav links for listing levels and add conversion form

--- a/conversions/templates/conversions/add_conversion.html
+++ b/conversions/templates/conversions/add_conversion.html
@@ -18,7 +18,7 @@
                 <h2 class="logo-font mt-5 mb-4 text-white">Add Conversion</h2>
                 <hr>
                 <a class="text-white" href="{% url 'profile' %}">
-                    <span><i class="fas fa-chevron-left text-white"></i> BACK TO PROFILE</span>
+                    <span><i class="fas fa-chevron-left text-white"></i> GO TO PROFILE</span>
                 </a>
             </div>
         </div>
