--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -16,8 +16,8 @@
                 SELL A CONVERSION
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">VIEW PRICING</a>
-                <a href="" class="dropdown-item">GET STARTED</a>
+                <a href="{% url 'listing_levels' %}" class="dropdown-item">VIEW PRICING</a>
+                <a href="{% url 'add_conversion' %}" class="dropdown-item">ADD A CONVERSION</a>
             </div>
         </li>
 
