updated listing levels template style

--- a/products/templates/products/listing_levels.html
+++ b/products/templates/products/listing_levels.html
@@ -24,41 +24,41 @@
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-lg-4 mb-5">
                 <a href="{% url 'view_plan' 7 %}">
-                    <div class="card">
+                    <div class="card no-border">
                         <div class="card-body bg-light text-center">
-                            <h1>STANDARD</h1>
-                            <img class="img-fluid border-black" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
+                            <h1 class="mb-4">STANDARD</h1>
+                            <img class="img-fluid br-1" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
                         </div>
                         <div class="card-footer text-center text-white">
                             <p class="larger-font"><strike>£7.99 for 30 days.</strike></p>
-                            <p class="larger-font">£0.00 UNTIL THE END OF JUNE</p>
+                            <p class="large-font mb-1">(£0.00 promotion will run until the end of July)</p>
                         </div>   
                     </div>
                 </a>
                
             </div>
-            <div class="col-12 col-lg-4">
-                <div class="card">
+            <div class="col-12 col-lg-4 mb-5">
+                <div class="card no-border">
                     <div class="card-body bg-light text-center">
-                        <h1>EXTENDED</h1>
-                        <img class="img-fluid border-black" src="{{ MEDIA_URL }}service-level-image.jpeg" alt="">
+                        <h1 class="mb-4">EXTENDED</h1>
+                        <img class="img-fluid br-1" src="{{ MEDIA_URL }}service-level-image.jpeg" alt="">
                     </div>
                     <div class="card-footer text-center text-white">
-                        <p class="larger-font">£14.99 for 60 days.</p> 
+                        <p class="larger-font mt-4 mb-4">£14.99 for 60 days.</p> 
                     </div>
                      
                 </div>
             </div>
-            <div class="col-12 col-lg-4">
-                <div class="card">
+            <div class="col-12 col-lg-4 mb-5">
+                <div class="card no-border">
                     <div class="card-body bg-light text-center">
-                        <h1>QUARTER</h1>
-                        <img class="img-fluid border-black" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
+                        <h1 class="mb-4">QUARTER</h1>
+                        <img class="img-fluid br-1" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
                     </div>
                     <div class="card-footer text-center text-white">
-                        <p class="larger-font">£19.99 for 90 days.</p> 
+                        <p class="larger-font mt-4 mb-4">£19.99 for 90 days.</p> 
                     </div>
                      
                 </div>
