Add user instructions to add conversion template

--- a/conversions/templates/conversions/add_conversion.html
+++ b/conversions/templates/conversions/add_conversion.html
@@ -22,6 +22,32 @@
                 </a>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col mt-5">
+                <p class="text-white text-center">
+                Use the form below to add your conversion to the site.
+                </p>
+                <p class="text-white text-center"></pclass>
+                We currently accommodate for campervan conversions and catering/mobile bar conversions (we will be expanding this very soon to include more categories).
+                </p> 
+                <p class="text-white text-center">
+                Once the form is completed and you hit 'save' at the bottom of the page, all the information will be saved and available to edit in your profile.
+                </p>
+                <a href="{% url 'listing_levels' %}">
+                    <p class="text-white text-center"><u>
+                    For the listing to become live on the site, you must pay a listing fee. These can be viewed here - <i class="fa fa-external-link-square"></i>
+                    </u></p>
+                </a>
+                <p class="text-white text-center mt-4">
+                We are currently only offering FREE listings, you will NOT be requested for any payment details in the checkout.
+                </p>
+                <p class="text-white text-center mt-4">
+                Listings will be approved within 24hours, you will recieve an email to confirm once your listing is live on the site.
+                </p>
+
+            </div>
+        </div>
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10 col-xl-8 bg-white mt-4">
                 <hr>
