--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,5 +1,10 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
+        <li class="nav-item nav-link nav-link-home nav-link-fade-up dropdown">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}" id="home-link" aria-expanded="false">
+                HOME
+            </a>
+        </li>
         <li class="nav-item nav-link nav-link-fade-up dropdown">
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="view-conversions-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 BUY A CONVERSION
