--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
             </h1>
             <div class="my-5">
                 <h4 class="text-center">
-                    <a href="#" class="see-conversions-button btn btn-lg rounded-2 text-uppercase py-3">See Conversions</a></h4>
+                    <a href="{% url 'conversions' %}" class="see-conversions-button btn btn-lg rounded-2 text-uppercase text-white py-3">See Conversions</a></h4>
             </div>
         </div>
     </div>
