Update style in various templates

--- a/conversions/templates/conversions/manage_conversions.html
+++ b/conversions/templates/conversions/manage_conversions.html
@@ -36,8 +36,8 @@
         <div class="row justify-content-center">
             <div class="col-10">
                 {% for conversion in live_listings %}
-                        <div class="card mb-4">
-                            <div class="card-body text-white">
+                        <div class="card no-border mb-4">
+                            <div class="card-body border-white text-white">
                                 <div class="row">
                                     <div class="col-12 col-lg-6">
                                         <h3>{{ conversion.listing_title }}</h3>
