--- a/profiles/templates/profiles/my_listings.html
+++ b/profiles/templates/profiles/my_listings.html
@@ -56,7 +56,7 @@
                         </a>
                         {% if not listing.is_active %}
                         <a href="{% url 'listing_levels' %}">
-                            <button class="btn btn-danger btn-outline-black text-white mt-2">View Listing Plans</button>
+                            <button class="btn btn-danger btn-outline-black text-white mt-2">View Listing Pricing</button>
                         </a>
                         {% endif %}
                         {% if listing.is_active %}
