--- a/profiles/templates/profiles/saved_listings.html
+++ b/profiles/templates/profiles/saved_listings.html
@@ -59,7 +59,7 @@
                         <a href="{% url 'remove_saved_listing' listing.conversion.id %}">
                             <button class="btn btn-white btn-outline-black text-white">Remove Listing</button>
                         </a>
-                        <p class="text-danger">Sorry this listing is no longer live on the site</p>
+                        <p class="text-danger mt-2 mb-2">Sorry this listing is no longer live on the site</p>
                         {% endif %}
                     </div>
                 </div>
