--- a/conversions/templates/conversions/approve_conversions.html
+++ b/conversions/templates/conversions/approve_conversions.html
@@ -36,8 +36,8 @@
             <div class="col-10">
                 {% for conversion in conversions %}
                     {% if not conversion.is_active %}
-                        <div class="card mb-4">
-                            <div class="card-body text-white">
+                        <div class="card no-border mb-4">
+                            <div class="card-body border-white text-white">
                                 <div class="row">
                                     <div class="col-12 col-lg-6">
                                         <h3>{{ conversion.listing_title }}</h3>
