Add templates for about and faq pages

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -39,13 +39,13 @@
         </li>
 
         <li class="nav-item nav-link nav-link-about nav-link-fade-up dropdown">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="about-us-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'about' %}" id="about-us-link" aria-haspopup="true" aria-expanded="false">
                 ABOUT US
             </a>
         </li>
 
         <li class="nav-item nav-link nav-link-faq nav-link-fade-up dropdown">
-            <a class="logo-font font-weight-bold nav-link text-white" href="#" id="faq-link" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-white" href="{% url 'faq' %}" id="faq-link" aria-haspopup="true" aria-expanded="false">
                 FAQ
             </a>
         </li>
