--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -49,8 +49,8 @@
                             {% with product.has_sizes as s %}
                                 {% if s %}
                                     <div class="col-12">
-                                        <p><strong>Size:</strong></p>
-                                        <select class="form-control rounded-0 w-50" name="product_size" id="id_product_size">
+                                        <p class="text-white"><strong>Size:</strong></p>
+                                        <select class="form-control rounded-2 w-50" name="product_size" id="id_product_size">
                                             <option value="xs">XS</option>
                                             <option value="s">S</option>
                                             <option value="m">M</option>
@@ -61,11 +61,11 @@
                                 {% endif %}
                                 {% if product.sku != "12345678" %}
                                 <div class="col-12">
-                                    <p class="mt-3"><strong>Quantity:</strong></p>
+                                    <p class="mt-3 text-white"><strong>Quantity:</strong></p>
                                     <div class="form-group w-50">
                                         <div class="input-group">
                                             <div class="input-group-prepend">
-                                                <button class="decrement-qty btn btn-black rounded-0"
+                                                <button class="decrement-qty btn btn-black rounded-2"
                                                     data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                     <span class="icon">
                                                         <i class="fas fa-minus"></i>
@@ -77,7 +77,7 @@
                                                 data-item_id="{{ product.id }}"
                                                 id="id_qty_{{ product.id }}">
                                             <div class="input-group-append">
-                                                <button class="increment-qty btn btn-black rounded-0"
+                                                <button class="increment-qty btn btn-black rounded-2"
                                                     data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                                     <span class="icon">
                                                         <i class="fas fa-plus"></i>
@@ -119,14 +119,14 @@
                                 {% endif %}
                                     <div class="col{% if s %}-12 mt-2{% endif %}">
                                         {% if from_listing_fees_page %}
-                                            <a href="{% url 'listing_levels' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                            <a href="{% url 'listing_levels' %}" class="btn btn-outline-black rounded-2 mt-5">
                                                 <span class="icon">
                                                     <i class="fas fa-chevron-left"></i>
                                                 </span>
                                                 <span class="text-uppercase">Back to Listing Levels</span>
                                             </a>
                                         {% else %}
-                                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-2 mt-5">
                                                 <span class="icon">
                                                     <i class="fas fa-chevron-left"></i>
                                                 </span>
@@ -134,9 +134,9 @@
                                             </a>
                                         {% endif %}
                                         {% if product.sku == '12345678' %}
-                                        <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag" {% if not my_listings %}disabled{% endif %}>
+                                        <input type="submit" class="btn btn-black rounded-2 text-uppercase mt-5" value="Add to Bag" {% if not my_listings %}disabled{% endif %}>
                                         {% else %}
-                                        <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                        <input type="submit" class="btn btn-black rounded-2 text-uppercase mt-5" value="Add to Bag">
                                         {% endif %}
                                     </div>
                                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
