--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,7 @@
 
     <title>Wild Mile {% block extra_title %}{% endblock %}</title>
   </head>
+
   <body>
     <header class="container-fluid fixed-top">
         <div id="topnav" class="row bg-dark pt-lg-2 d-none d-lg-flex">
@@ -135,9 +136,30 @@
 
     {% block page_header %}
     {% endblock %}
-
+    <div class="flex-wrapper">
     {% block content %}
     {% endblock %}
+    
+      <!--FOOTER-->
+        <footer id="footer" class="mt-5 bg-cream">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 mt-4 d-flex justify-content-center">
+                        <a class="nav-link footer-icon" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                        <a class="nav-link footer-icon" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                        <a class="nav-link footer-icon" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 mt-2 mb-3 d-flex justify-content-center">
+                        <p class="footer-text text-center">Copyright 2020 - SOMA Post Production Services</p>
+                        <p class="footer-text text-center">Site Design by Jamie Rolls</p>
+                    </div>
+                </div>        
+            </div>
+        </footer>
+    </div>
+    
 
     {% block postloadjs %}
     <script type="text/javascript">
@@ -146,4 +168,5 @@
     {% endblock %}
 
   </body>
+
 </html>
