--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-    <div class="container">
+    <div class="container page-content">
         <div class="row">
             <div class="col"> 
                 <h2 class="logo-font mt-5 mb-4 text-white">ABOUT</h2>
