--- a/products/templates/products/listing_levels.html
+++ b/products/templates/products/listing_levels.html
@@ -27,7 +27,7 @@
             <div class="col-12 col-lg-4 mb-5">
                 <a href="{% url 'view_plan' 7 %}">
                     <div class="card no-border">
-                        <div class="card-body bg-light text-center">
+                        <div class="card-body bg-cream text-center">
                             <h1 class="mb-4">STANDARD</h1>
                             <img class="img-fluid br-1" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
                         </div>
@@ -41,7 +41,7 @@
             </div>
             <div class="col-12 col-lg-4 mb-5">
                 <div class="card no-border">
-                    <div class="card-body bg-light text-center">
+                    <div class="card-body bg-cream text-center">
                         <h1 class="mb-4">EXTENDED</h1>
                         <img class="img-fluid br-1" src="{{ MEDIA_URL }}service-level-image.jpeg" alt="">
                     </div>
@@ -53,7 +53,7 @@
             </div>
             <div class="col-12 col-lg-4 mb-5">
                 <div class="card no-border">
-                    <div class="card-body bg-light text-center">
+                    <div class="card-body bg-cream text-center">
                         <h1 class="mb-4">QUARTER</h1>
                         <img class="img-fluid br-1" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
                     </div>
