--- a/conversions/templates/conversions/manage_conversions.html
+++ b/conversions/templates/conversions/manage_conversions.html
@@ -27,7 +27,7 @@
                 <h5 class="page-sub-header text-white">There are {{ live_listings | length }} listings live on the site.</h5>
                 {% if require_approval %}
                 <h5 class="page-sub-header text-white">You have {{ pending_approval_listings | length }} listings that are pending approval.</h5>
-                <a id="back-to-approval-button" href="{% url 'approve_conversions' %}" class="mt-2 btn border-white rounded-2 text-white"><i class="ml-1 fa fa-chevron-left mr-2"></i> Go To Approvals </a>
+                <a id="back-to-approval-button" href="{% url 'approve_conversions' %}" class="mt-2 btn btn-outline-black rounded-2 text-white"><i class="ml-1 fa fa-chevron-left mr-2"></i> Go To Approvals </a>
                 {% else %}
                 <h5 class="page-sub-header text-white">There are no listings awating approval.</h5>
                 {% endif %}
@@ -50,11 +50,11 @@
                                 </div>
                             </div>
                             <div class="card-footer text-center text-lg-left">
-                                <a href="{% url 'conversion_detail' conversion.id %}" class="btn border-white rounded-2 text-white mb-2">View Details</a>
-                                <a href="{% url 'edit_conversion' conversion.id %}" class="btn border-white rounded-2 text-white ml-2 mb-2">Edit Conversion</a>
-                                <a href="{% url 'delete_conversion' conversion.id %}" class="btn border-white rounded-2 text-white ml-2 mb-2">Delete Conversion</a>
-                                <a class="ml-2 btn border-white rounded-2 text-white mb-2 contact-info-button">Contact Seller</a>
-                                <a href="{% url 'delist_conversion' conversion.id %}" class="ml-2 mb-2 btn border-white rounded-2 text-white">Delist Listing <i class="ml-1 fa fa-minus-circle"></i></a>
+                                <a href="{% url 'conversion_detail' conversion.id %}" class="btn btn-outline-black rounded-2 text-white mb-2">View Details</a>
+                                <a href="{% url 'edit_conversion' conversion.id %}" class="btn btn-outline-black rounded-2 text-white ml-2 mb-2">Edit Conversion</a>
+                                <a href="{% url 'delete_conversion' conversion.id %}" class="btn btn-outline-black rounded-2 text-white ml-2 mb-2">Delete Conversion</a>
+                                <a class="ml-2 btn btn-outline-black rounded-2 text-white mb-2 contact-info-button">Contact Seller</a>
+                                <a href="{% url 'delist_conversion' conversion.id %}" class="ml-2 mb-2 btn btn-outline-black rounded-2 text-white">Delist Listing <i class="ml-1 fa fa-minus-circle"></i></a>
                                 <p class="mt-3 text-white large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
                                 <p class="mt-3 text-white large-font contact-info-row d-none">Email - {{ conversion.user.user.email }}</p>
                             </div>
