--- a/conversions/templates/conversions/conversions.html
+++ b/conversions/templates/conversions/conversions.html
@@ -122,8 +122,8 @@
                                         </div>
                                     </div>
                                     <div class="card-footer text-center text-lg-left">
-                                        <a href="{% url 'conversion_detail' conversion.id %}" class="btn border-black bg-white rounded-2 text-black mb-2">View Details</a>
-                                        <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}?from_conversions=True" class="ml-2 btn border-black bg-white rounded-2 text-black mb-2">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
+                                        <a href="{% url 'conversion_detail' conversion.id %}" class="btn btn-outline-black rounded-2 mb-2">View Details</a>
+                                        <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}?from_conversions=True" class="ml-2 btn btn-outline-black rounded-2 mb-2">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
                                         <p class="mt-3 text-white large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
                                         <p class="mt-3 text-white large-font contact-info-row d-none">Email - {{ conversion.user.user.email }}</p>
                                     </div>
