--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,8 +7,7 @@
 
 {% block inner_content %}
 
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign In" %}</h2>
+<h2 class="logo-font text-white mt-5 mb-4">{% trans "Sign In" %}</h2>
 <hr>
 
 {% get_providers as socialaccount_providers %}
