Added add product template, view and url

--- a/templates/base.html
+++ b/templates/base.html
@@ -144,16 +144,15 @@
         <footer id="footer" class="mt-5 bg-cream">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 mt-4 d-flex justify-content-center">
-                        <a class="nav-link footer-icon" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                        <a class="nav-link footer-icon" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                        <a class="nav-link footer-icon" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <div class="col-12 mt-3 d-flex justify-content-center">
+                        <a class="nav-link footer-icon" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square text-black"></i></a>
+                        <a class="nav-link footer-icon" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square text-black"></i></a>
+                        <a class="nav-link footer-icon" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square text-black"></i></a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 mt-2 mb-3 d-flex justify-content-center">
-                        <p class="footer-text text-center">Copyright 2020 - SOMA Post Production Services</p>
-                        <p class="footer-text text-center">Site Design by Jamie Rolls</p>
+                        <p class="footer-text text-center ">Copyright 2021 - Wild Mile</p>
                     </div>
                 </div>        
             </div>
